public/style.css
* {
    font-family: "Google Sans", sans-serif;
    margin: 0;
    padding: 0;
}



#map {
    height: 100vh; 
    width: 100vw;
}


#splash {
    height: 100vh; 
    width: 100vw;

    flex-direction: column;
    display: flex;
    align-items: center;
    justify-content: center;

    position: fixed;

    z-index: 100000;
    
    backdrop-filter: blur(6px);
    background-color: #ffffff00;
    transition: all .3s;
}

#splash.hidden {
    pointer-events: none;
    background-color: #00000000;
    backdrop-filter: blur(0px);
}

#welcome {
    display: flex;
    margin-bottom: 10px;
    align-items: center;
}

#splash.hidden #splashtext {
    opacity: 0;
}

#splash.hidden #begin {
    opacity: 0;
}

#splashtext {
    position: relative;
    background-color: #ffffff;
    text-align: left;
    width: 40%;
    padding: 25px;
}

#splashtext.dark {
    background-color: #202F37;
}

#splashtext p {
    text-align: justify;
}

#welcome img {
    height: 22px;
    margin-right: 8px;
}

#splashtext h3 {
    margin-top: 15px;
    margin-bottom: 5px;
}

#begin {
    margin-top: 20px;
    position: relative;
    transition: transform .1s;
    background: none;
    outline: none;

    text-shadow: 0px 0px 40px #ffffff;
}

#begin.dark {
    text-shadow: 0px 0px 40px #000000;
}

#splashtext:hover + #begin {
    transform: scale(1.06);
}

#begin:hover {
    transform: scale(1.06);
}





.info {
    align-content: center;
    position: absolute;
    z-index: 20000;
    border-radius: 3px;
    background: #ffffff2c;

    color: #202F37;

    outline: 3px solid #b0b9bd;

    backdrop-filter: blur(20px);

    padding: 14px;

    transition: all 0.25s;
}

.direction {
    color: #92999d;
}

a {
    color: #92999d;
    text-decoration: underline wavy !important;
}

.scheduledArrival {
    color: #92999d;
}

.confirmedArrival:after {
    content: "";   

    
    display: inline-block;
    width: 1em;
    height: 1em;
    vertical-align: middle;

    background-image: url(images/live-arrival.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;

    margin-left: 0.2em;
}

.custom-cluster-icon {
    background-image: url(images/bus-group.png);
    background-size: 100%;
    opacity: 75%;

    color: #ffffff;
    width: 12px;
    height: 12px;
    display: flex;

    justify-content: center;
    align-items: center;
    
    font-weight: bold;
    font-size: 14px;
    
    z-index: 7000 !important;
}

.leaflet-tooltip {
  background-color: #222;
  color: white;
  border: 1px solid #555;
  border-radius: 6px;
  padding: 6px 10px;
  font-size: 14px;

  z-index: 10000 !important;
}

.leaflet-tooltip-left:before {
  border-left-color: #222;
  border-left-width: 7px;
}

.leaflet-tooltip-right:before {
  border-right-color: #222;
  border-left-width: 7px;
}

#data {
    left: 80px;
    top: 160px;

    max-height: 400px;
    overflow-y: auto;
    display: none;
}

#highlight {
    right: 80px;
    top: 80px;
    height: 25px;

    display: flex;
    align-items: center;
    justify-content: center;
}

#highlight input {
    outline: none;

    font-weight: 500;

    border: none;
    box-sizing: border-box;
    color: #202F37;

    margin-right: 15px;
    margin-left: 15px;

    font-size: 15px;
    padding-left: 4px;
    border-radius: 3px;

    width: 110px;

    background: #ffffff;
}

#highlight.dark input {
    background: #40515A;
    color: #d6dbe1;
}

#searchRoutes {
    box-sizing: border-box;
    background-color: #b0b9bd;
    height: 20px;
    aspect-ratio: 1 / 1;
    display: flex;
    border-radius: 3px;
    padding: 1px;

    transition: .15s all;
    cursor: pointer;
}

#searchRoutes:hover {
    transform: scale(1.15);
}


#data li {
    margin-top: 10px;
}

#data li b {
    font-weight: 600;
}

#att {
    left: 80px;
    top: 80px;
    height: 25px;
}

#options {
    left: 80px;
    bottom: 80px;

    display: none;
    flex-direction: column;
    justify-content: center;
}

.option {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
    margin-top: 10px;
}

.switch {
    position: relative;
    width: 42px;
    height: 24px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    inset: 0;
    background: #b0b9bd;
    opacity: 90%;
    border-radius: 5px;
    cursor: pointer;
    transition: background 0.25s;
}

.info .dark .slider {
    background: #40515A;
}

.slider::before {
    content: "";
    position: absolute;
    height: 16px;
    width: 16px;
    left: 4px;
    top: 4px;
    background: white;
    border-radius: 2px;
    transition: transform 0.15s;
}

.switch input:checked + .slider::before {
    transform: translateX(18px);
}

.switch input:checked + .slider {
    background: #6FADCA;
}

.info.dark .slider-track {
    background: #40515A;
}




#modeSwap {
    right: 440px;
    top: 80px;
}

#settingsButton {
    right: 515px;
    top: 80px;
}

.circle {
    height: 25px;
    width: 25px;

    text-align: center;
    align-content: center;

    border-radius: 30px;

    cursor: pointer;
    transition: transform .25s;
}

.circle:hover {
    transform: scale(1.15);
}

.circle img {
    width: 100%;
    transform: scale(1.5);
}

#warning {
    right: 80px;
    bottom: 80px;

    display: none;
    background: #ffffff;
    height: 25px;
}

#warning.dark {
    background: #202f37;
}

.info.dark {
    outline: 3px solid #40515A;
    color: #d6dbe1;

    background: #202f374f;
}


li {
    text-decoration: none;
    list-style-type: none;
}



#solid {
  border: 1.5px solid #b0b9bd;
  margin: 10px 0;
}

.leaflet-control-attribution {
    background-color: #40515a6a !important;
    color: white !important;
    font-size: 12px;

    right: 5px;
    bottom: 5px;
    padding: 5px 10px;
    border-radius: 3px;

    text-decoration: none;
    backdrop-filter: blur(7px);
}

.leaflet-control-attribution a {
    color: white;  
    font-weight: 500;
}

.leaflet-container {
    background-color:#b0b9bd;
}

